tests/core/exparseControlFlow.test
====================================================================================================
Loop control flow statements.
====================================================================================================
----------------------------------------------------------------------------------------------------

break

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

<Break/>

----------------------------------------------------------------------------------------------------

continue

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

<Continue/>

====================================================================================================
Loop control flow statements don't receive arguments.
====================================================================================================
----------------------------------------------------------------------------------------------------

break a

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

Exception: Syntax error
<no file>, line 1
    do { break a}
         ^^^^^

----------------------------------------------------------------------------------------------------

continue a

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

Exception: Syntax error
<no file>, line 1
    do { continue a}
         ^^^^^^^^

====================================================================================================
The return statement
====================================================================================================
----------------------------------------------------------------------------------------------------

=

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

<Return>
    <Id name="undefined"/>
</Return>

----------------------------------------------------------------------------------------------------

= 1

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

<Return>
    <Integer value="1"/>
</Return>

----------------------------------------------------------------------------------------------------

= 1,2

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

<Return>
    <Integer value="1"/>
    <Integer value="2"/>
</Return>

----------------------------------------------------------------------------------------------------
